--- a/.gitignore
+++ b/.gitignore
@@ -26,12 +26,13 @@ build/Release
 # Dependency directory
 node_modules
 
-# Custom
-credentials.js
-Thumbs.db
-
 # Optional npm cache directory
 .npm
 
 # Optional REPL history
 .node_repl_history
+
+# Custom
+.jshintrc
+credentials.js
+Thumbs.db
