--- a/stylesheets/.eslintrc
+++ b/stylesheets/.eslintrc
@@ -14,7 +14,7 @@
     "id-blacklist": ["error"],
     "no-restricted-globals": ["error"],
     "no-restricted-imports": ["error"],
-    "no-restricdted-modules": ["error"],
+    "no-restricted-modules": ["error"],
     "no-restricted-syntax": ["error"],
 
     "accessor-pairs": "warn",
@@ -41,7 +41,7 @@
     "consistent-this": "off",
     "constructor-super": "error",
     "curly": ["error", "multi-line", "consistent"],
-    "default": "error",
+    "default-case": "error",
     "dot-location": ["error", "property"],
     "dot-notation": ["error", { "allowKeywords": true }],
     "eqeqeq": ["error", "always"],
@@ -54,11 +54,7 @@
     "handle-callback-err": "error",
     "id-length": "off",
     "id-match": "off",
-    "indent": ["error", 2, {
-      "SwitchCase": 1,
-      "outerIIFEBody": 1,
-      "MemberExpression": 0
-    }],
+    "indent": ["error", 2, { "SwitchCase": 1 }],
     "init-declarations": ["error", "always"],
     "key-spacing": ["error", {
       "beforeColon": false,
@@ -66,7 +62,7 @@
       "mode": "minimum"
     }],
     "keyword-spacing": ["error", { "before": true, "after": true }],
-    "linebreak-style": ["error", "unix"],
+    "linebreak-style": ["off"],
     "lines-around-comment": ["warn", {
       "beforeBlockComment": true,
       "afterBlockComment": false,
@@ -85,7 +81,7 @@
     "max-nested-callbacks": ["warn", 2],
     "max-params": ["warn", 3],
     "max-statements": ["warn", 10],
-    "max-statements-per-line": ["warn", 1],
+    "max-statements-per-line": ["warn", { "max": 1 }],
     "multiline-ternary": "off",
     "new-cap": ["error", {
       "newIsCap": true,
@@ -130,7 +126,7 @@
     "no-extra-bind": "error",
     "no-extra-boolean-cast": "error",
     "no-extra-label": "warn",
-    "no-extra-parens": ["warn", { "nestedBinaryExpressions": false }],
+    "no-extra-parens": ["warn", "all", { "nestedBinaryExpressions": false }],
     "no-extra-semi": "error",
     "no-fallthrough": "error",
     "no-floating-decimal": "error",
@@ -140,7 +136,7 @@
     "no-implied-eval": "error",
     "no-inline-comments": "off",
     "no-inner-declarations": ["error", "functions"],
-    "no-invalid-regex": "error",
+    "no-invalid-regexp": "error",
     "no-invalid-this": "warn",
     "no-irregular-whitespace": ["warn", {
       "skipStrings": false,
@@ -204,10 +200,7 @@
     "no-undef": ["error", { "typeof": true }],
     "no-undef-init": "error",
     "no-undefined": "error",
-    "no-underscore-dangle": ["error", {
-      "allowAfterThis": false,
-      "allowAfterSuper": false
-    }],
+    "no-underscore-dangle": "error",
     "no-unexpected-multiline": "error",
     "no-unmodified-loop-condition": "warn",
     "no-unneeded-ternary": ["error", { "defaultAssignment": false }],
@@ -235,7 +228,7 @@
     }],
     "object-property-newline": "error",
     "object-shorthand": ["warn", "always"],
-    "one-var": ["never"],
+    "one-var": ["error", "never"],
     "one-var-declaration-per-line": "off",
     "operator-assignment": ["error", "always"],
     "operator-linebreak": ["error", "before"],
