--- a/stylesheets/.eslintrc
+++ b/stylesheets/.eslintrc
@@ -44,18 +44,18 @@
     "default-case": "error",
     "dot-location": ["error", "property"],
     "dot-notation": ["error", { "allowKeywords": true }],
-    "eqeqeq": ["error", "always"],
+    "eqeqeq": ["warn", "always"],
     "eol-last": "error",
     "func-names": ["error", "always"],
     "func-style": ["error", "expression", { "allowArrowFunctions": true }],
     "generator-star-spacing": ["error", { "before": false, "after": true }],
-    "global-require": "error",
+    "global-require": "warn",
     "guard-for-in": "warn",
     "handle-callback-err": "error",
     "id-length": "off",
     "id-match": "off",
     "indent": ["error", 2, { "SwitchCase": 1 }],
-    "init-declarations": ["error", "always"],
+    "init-declarations": ["warn", "always"],
     "key-spacing": ["error", {
       "beforeColon": false,
       "afterColon": true,
@@ -81,7 +81,7 @@
     "max-nested-callbacks": ["warn", 2],
     "max-params": ["warn", 3],
     "max-statements": ["warn", 10],
-    "max-statements-per-line": ["warn", { "max": 1 }],
+    "max-statements-per-line": ["warn", { "max": 2 }],
     "multiline-ternary": "off",
     "new-cap": ["error", {
       "newIsCap": true,
@@ -209,19 +209,19 @@
     "no-unused-expressions": "error",
     "no-unused-labels": "error",
     "no-unused-vars": "error",
-    "no-use-before-define": "error",
+    "no-use-before-define": "warn",
     "no-useless-call": "error",
     "no-useless-concat": "error",
     "no-useless-computed-key": "error",
     "no-useless-constructor": "error",
     "no-useless-escape": "error",
     "no-useless-rename": "error",
-    "no-var": "error",
+    "no-var": "warn",
     "no-void": "warn",
     "no-warning-comments": "warn",
     "no-whitespace-before-property": "error",
     "no-with": "warn",
-    "object-curly-newline": ["error", { "multiline": true }],
+    "object-curly-newline": ["warn", { "multiline": true }],
     "object-curly-spacing": ["error", "always", {
       "objectsInObjects": true,
       "arraysInObjects": true
@@ -302,7 +302,7 @@
         "func": "function",
         "host": "external",
         "property": "prop",
-        "return": "returns",
+        "returns": "return",
         "virtual": "abstract"
       },
       "preferType": {
