--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "build": "npm run less & npm run store",
     "copy-reset": "cp node_modules/flexbox-reset/flexbox-reset.less less/reset.less",
     "less": "node build/less.js",
+    "patterns": "lessc patterns/patterns.less patterns/patterns.css",
     "store": "node build/store.js"
   },
   "devDependencies": {
