--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
   },
   "repository": "https://github.com/digitallinguistics/styles.git",
   "scripts": {
-    "build": "npm run less & npm run store",
-    "copy-reset": "cp node_modules/flexbox-reset/flexbox-reset.less less/reset.less",
+    "build": "npm run less & npm run patterns & npm run store",
     "less": "node build/less.js",
     "patterns": "lessc patterns/patterns.less patterns/patterns.css & browserify patterns/polyfill.js -o patterns/index.js -t babelify",
     "store": "node build/store.js"
@@ -21,7 +20,7 @@
     "babel-polyfill": "^6.23.0",
     "babel-preset-env": "^1.2.2",
     "babelify": "^7.3.0",
-    "flexbox-reset": "^1.1.2",
+    "flexbox-reset": "^2.0.0",
     "less": "^2.7.2"
   },
   "private": true
