--- a/stylesheets/.eslintrc
+++ b/stylesheets/.eslintrc
@@ -44,7 +44,7 @@
     "comma-style": ["error", "last"],
     "complexity": "off",
     "computed-property-spacing": ["error", "never"],
-    "consistent-return": "warn",
+    "consistent-return": "off",
     "consistent-this": "off",
     "constructor-super": "error",
     "curly": ["error", "multi-line", "consistent"],
@@ -174,7 +174,31 @@
     "no-loop-func": "error",
     "no-magic-numbers": ["warn", {
       "ignoreArrayIndexes": true,
-      "ignore": [-1, 0, 1, 2, 200, 201, 204, 400, 401, 404, 405, 409, 500, 3000]
+      "ignore": [
+        -1,
+        0,
+        1,
+        2,
+        10,
+        200,
+        201,
+        204,
+        207,
+        302,
+        304,
+        400,
+        401,
+        403,
+        404,
+        405,
+        408,
+        409,
+        412,
+        422,
+        500,
+        1000,
+        3000
+      ]
     }],
     "no-mixed-operators": ["warn", { "allowSamePrecedence": true }],
     "no-mixed-requires": ["error", { "allowCall": true }],
