--- a/package.json
+++ b/package.json
@@ -16,13 +16,13 @@
   },
   "private": true,
   "dependencies": {
-    "flexbox-reset": "^2.0.0",
-    "highlight.js": "^9.12.0"
+    "flexbox-reset": "^2.0.0"
   },
   "devDependencies": {
     "babel-core": "^6.25.0",
     "babel-loader": "^7.0.0",
     "babel-preset-env": "^1.5.2",
+    "handlebars": "^4.0.10",
     "less": "^2.7.2",
     "webpack": "^2.6.1"
   }
