--- a/stylesheets/.eslintrc
+++ b/stylesheets/.eslintrc
@@ -6,10 +6,12 @@
     "ecmaVersion": 2017,
     "ecmaFeatures": {
       "impliedStrict": true
-    }
+    },
+    "sourceType": "module"
   },
 
   "env": {
+    "browser": true,
     "es6": true,
     "jasmine": true,
     "node": true
@@ -33,10 +35,7 @@
       "arraysInArrays": false
     }],
     "array-callback-return": "warn",
-    "array-element-newline": ["warn", {
-      "minItems": 4,
-      "multiline": true
-    }],
+    "array-element-newline": "off",
     "arrow-body-style": ["warn", "as-needed"],
     "arrow-parens": ["error", "as-needed"],
     "arrow-spacing": ["error", { "before": true, "after": true }],
@@ -72,7 +71,10 @@
     "handle-callback-err": "error",
     "id-length": "off",
     "id-match": "off",
-    "indent": ["error", 2, { "SwitchCase": 1 }],
+    "indent": ["error", 2, {
+      "SwitchCase": 1,
+      "MemberExpression": "off"
+    }],
     "init-declarations": ["warn", "always"],
     "key-spacing": ["error", {
       "beforeColon": false,
@@ -108,13 +110,13 @@
     "max-statements": ["warn", 20],
     "max-statements-per-line": ["warn", { "max": 2 }],
     "multiline-ternary": "off",
-    "new-cap": ["error", {
+    "new-cap": ["warn", {
       "newIsCap": true,
       "capIsNew": true,
       "properties": true
     }],
     "new-parens": "off",
-    "newline-per-chained-call": ["warn", { "ignoreChainWithDepth": 2 }],
+    "newline-per-chained-call": ["warn", { "ignoreChainWithDepth": 3 }],
     "no-alert": "warn",
     "no-array-constructor": "warn",
     "no-await-in-loop": "error",
@@ -127,7 +129,13 @@
     "no-compare-neg-zero": "error",
     "no-cond-assign": ["error", "except-parens"],
     "no-confusing-arrow": ["error", { "allowParens": true }],
-    "no-console": ["warn", { "allow": ["error"] }],
+    "no-console": ["warn", { "allow": [
+      "error",
+      "info",
+      "time",
+      "timeEnd",
+      "warn"
+    ] }],
     "no-const-assign": "error",
     "no-constant-condition": ["error", { "checkLoops": true }],
     "no-continue": "warn",
@@ -186,6 +194,7 @@
         0,
         1,
         2,
+        3,
         10,
         200,
         201,
@@ -212,6 +221,7 @@
     "no-mixed-spaces-and-tabs": "error",
     "no-multi-assign": "warn",
     "no-multi-spaces": ["error", {
+      "ignoreEOLComments": true,
       "exceptions": {
         "AssignmentExpression": true,
         "VariableDeclarator": true
@@ -288,7 +298,8 @@
     "nonblock-statement-body-position": ["error", "beside"],
     "object-curly-newline": ["warn", {
       "ObjectExpression": {
-        "minProperties": 2
+        "consistent": true,
+        "minProperties": 4
       },
       "ObjectPattern": {
         "multiline": true
@@ -298,7 +309,7 @@
       "objectsInObjects": true,
       "arraysInObjects": true
     }],
-    "object-property-newline": "error",
+    "object-property-newline": ["warn", { "allowMultiplePropertiesPerLine": true }],
     "object-shorthand": ["warn", "always"],
     "one-var": ["error", "never"],
     "one-var-declaration-per-line": "off",
@@ -331,7 +342,7 @@
     }],
     "prefer-rest-params": "error",
     "prefer-spread": "error",
-    "prefer-template": "error",
+    "prefer-template": "warn",
     "quote-props": ["error", "as-needed", {
       "keywords": false,
       "unnecessary": true
