--- a/stylesheets/.eslintrc
+++ b/stylesheets/.eslintrc
@@ -272,7 +272,9 @@
     "no-undef": ["error", { "typeof": true }],
     "no-undef-init": "error",
     "no-undefined": "warn",
-    "no-underscore-dangle": "warn",
+    "no-underscore-dangle": ["warn", {
+      "allow": ["_ts", "_etag"]
+    }],
     "no-unexpected-multiline": "error",
     "no-unmodified-loop-condition": "warn",
     "no-unneeded-ternary": ["error", { "defaultAssignment": false }],
