--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "build": "npm run hbs & npm run upload & npm run less & npm run css",
     "css": "node build/css.js",
     "hbs": "node build/hbs.js",
+    "kss": "./node_modules/.bin/kss --config kss.config.json",
     "less": "node build/less.js",
     "upload": "node build/upload.js"
   },
@@ -22,6 +23,8 @@
   "devDependencies": {
     "azure-storage": "^2.1.0",
     "handlebars": "^4.0.10",
-    "less": "^2.7.2"
+    "kss": "^3.0.0-beta.18",
+    "less": "^2.7.2",
+    "michelangelo": "^0.6.1"
   }
 }
