--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "repository": "https://github.com/digitallinguistics/styles.git",
   "scripts": {
-    "build": "npm run hbs & npm run upload & npm run less & npm run css",
+    "build": "npm run hbs & npm run kss & npm run upload & npm run less & npm run css",
     "css": "node build/css.js",
     "hbs": "node build/hbs.js",
     "kss": "./node_modules/.bin/kss --config kss.config.json",
