compile patterns.less

--- a/kss.config.json
+++ b/kss.config.json
@@ -8,13 +8,6 @@
   "destination": "docs/",
   "homepage": "README.md",
   "builder": "node_modules/michelangelo/kss_styleguide/custom-template/",
-  "css": [
-    "../css/fonts.css",
-    "../css/colors.css",
-    "../css/variables.css",
-    "../css/elements.css",
-    "../css/components.css",
-    "../css/patterns.css"
-  ],
+  "css": ["../patterns.css"],
   "js": []
 }
