make multiple copies of patterns.css
- one for production, one for development
- this is necessary because you're serving GitHub pages from the `/docs` folder, so it doesn't have access to the `/css` folder one level up.

--- a/kss.config.json
+++ b/kss.config.json
@@ -8,6 +8,6 @@
   "destination": "docs/",
   "homepage": "README.md",
   "builder": "node_modules/michelangelo/kss_styleguide/custom-template/",
-  "css": ["../patterns.css"],
+  "css": ["patterns.css"],
   "js": []
 }
