--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "styles",
   "version": "1.0.0",
-  "description": "A collection of DLx assets and stylesheets",
+  "description": "A collection of DLx assets and styles",
   "homepage": "https://github.com/digitallinguistics/styles",
   "bugs": "https://github.com/digitallinguistics/styles/issues",
   "license": "MIT",
