--- a/package.json
+++ b/package.json
@@ -11,22 +11,17 @@
   },
   "repository": "https://github.com/digitallinguistics/styles.git",
   "scripts": {
-    "build": "npm run kss & npm run upload & npm run less & npm run css",
-    "css": "node build/css.js",
-    "hbs": "node build/hbs.js",
+    "build": "npm run upload & npm run kss",
     "kss": "./node_modules/.bin/kss --config kss.config.json",
-    "less": "node build/less.js & lessc less/patterns.less docs/patterns.css",
-    "upload": "node build/upload.js",
-    "server": "node ../utilities/node/server.js . 3000"
+    "upload": "node build/upload.js"
   },
   "private": true,
   "dependencies": {},
   "devDependencies": {
-    "azure-storage": "^2.1.0",
-    "feather-icons": "^4.0.1",
-    "handlebars": "^4.0.10",
-    "kss": "^3.0.0-beta.18",
-    "less": "^2.7.2",
-    "michelangelo": "^0.6.1"
+    "azure-storage": "^2.10.2",
+    "feather-icons": "^4.9.0",
+    "kss": "^3.0.0-beta.23",
+    "less": "^3.9.0",
+    "michelangelo": "^0.8.0"
   }
 }
