--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "kss": "npm run kss --config kss.config.json",
     "upload": "node build/upload.js"
   },
+  "engines": {
+    "node": "11.x"
+  },
   "private": true,
   "dependencies": {},
   "devDependencies": {
@@ -23,6 +26,7 @@
     "feather-icons": "^4.9.0",
     "kss": "^3.0.0-beta.23",
     "less": "^3.9.0",
-    "michelangelo": "^0.8.0"
+    "michelangelo": "^0.8.0",
+    "recursive-readdir": "^2.2.2"
   }
 }
