--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "kss": "^3.0.0-beta.23",
     "less": "^3.9.0",
     "michelangelo": "^0.8.0",
+    "ora": "^3.0.0",
     "recursive-readdir": "^2.2.2"
   }
 }
