--- a/kss/kss.config.json
+++ b/kss/kss.config.json
@@ -1,17 +1,11 @@
 {
   "title": "DLx Pattern Library",
-  "source": [
-    "components/",
-    "elements/",
-    "less/"
-  ],
+  "source": [],
   "destination": "docs/",
-  "homepage": "../less/README.md",
+  "homepage": "README.md",
   "builder": "node_modules/michelangelo/kss_styleguide/custom-template/",
-  "css": [
-    "patterns.css"
-  ],
+  "css": [],
   "js": [
-    "https://digitallinguistics.blob.core.windows.net/scripts/patterns.js"
+    "kss/patterns.js"
   ]
 }
