--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   },
   "repository": "https://github.com/digitallinguistics/styles.git",
   "scripts": {
-    "build": "npm run upload & npm run kss",
-    "kss": "./node_modules/.bin/kss --config kss.config.json",
+    "build": "npm run upload && npm run kss",
+    "kss": "lessc kss/dlx.less kss/dlx.css --clean-css && ./node_modules/.bin/kss --config kss.config.json",
     "upload": "node build/upload.js"
   },
   "engines": {
@@ -26,6 +26,7 @@
     "feather-icons": "^4.9.0",
     "kss": "^3.0.0-beta.23",
     "less": "^3.9.0",
+    "less-plugin-clean-css": "^1.5.1",
     "michelangelo": "^0.8.0",
     "ora": "^3.0.0",
     "recursive-readdir": "^2.2.2"
