--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,4 +1,4 @@
-# ESLint v5.13.0
+# ESLint v5.15.2
 parserOptions:
   ecmaVersion: 10
   ecmaFeatures:
@@ -126,9 +126,9 @@ rules:
   key-spacing:
   - error
   - beforeColon: false
-    afterColon: true
-    mode: minimum
-    align: value
+    afterColon:  true
+    mode:        minimum
+    align:       value
   keyword-spacing:
   - error
   - before: true
@@ -469,6 +469,7 @@ rules:
   - array: false
     object: true
   - enforceForRenamedProperties: false
+  prefer-named-capture-group: warn
   prefer-numeric-literals: warn
   prefer-object-spread: off
   prefer-promise-reject-errors:
